Finalized Blog, this is the new backup.

--- a/szamoranoBlog/Views/Shared/_Layout.cshtml
+++ b/szamoranoBlog/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; 2017 Blog All Rights Reserved</p>
+            <p class="m-0 text-center text-white">Copyright &copy; 2018 Steven Zamorano | Blog. All rights reserved.</p>
         </div>
         <!-- /.container -->
     </footer>
